# ChangeLog for x11-misc/kbdd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Nov 2010; Nickolaj Stjujsckij <sterkrig@home.no> kbdd-0.3.2.ebuild:
  Make 0.3.2 actually downloadable (tarball uploaded to rion-overlay), drop
  $HASH

  03 Nov 2010; Nickolaj Stjujsckij <sterkrig@home.no> -kbdd-0.3.ebuild,
  +kbdd-0.3.2.ebuild:
  Drop v0.3, add v0.3.2

  30 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> +kbdd-0.3.1.ebuild:
  Bump v0.3.1

  28 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> -kbdd-0.1.ebuild,
  +kbdd-0.3.ebuild:
   Drop DBus-less version since 0.2.x works all right, add v0.3

  20 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> -kbdd-0.2.3.ebuild,
  +kbdd-0.2.9.ebuild:
  Bump new version

  17 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> kbdd-9999.ebuild:
  Add IUSE="debug" for git-version

  17 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> +kbdd-9999.ebuild:
  Add git-version

  15 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> -kbdd-0.2.2.ebuild,
  +kbdd-0.2.3.ebuild:
  Bump v0.2.3

  14 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> -kbdd-0.2.ebuild,
  +kbdd-0.2.2.ebuild:
  Bump v0.2.2

  13 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> +kbdd-0.2.ebuild:
  Bump x11-misc/kbdd-0.2, with dbus support and own `install` target

  11 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> kbdd-0.1.ebuild:
  Fix `dodoc` warning for x11-misc/kbdd

  04 Oct 2010; Nickolaj Stjujsckij <sterkrig@home.no> kbdd-0.1.ebuild,
  +metadata.xml:
  Add kbdd, simple layout switcher, v.0.1
