@@ -1,9 +1,7 @@
-DIST kbdd-0.2.9.tar.gz 202775 RMD160 fd387a2f47ebaf2c163b793524a976c56e11571b SHA1 7b265e75789d17d01d21581023ec9b3e33641810 SHA256 2a645634c3292f763d4b48a7798eaa2b7d0107dcbc9e22114144c829f92133c9
-DIST kbdd-0.3.1.tar.gz 204253 RMD160 e22fd5f03a0e46723d5fa2d6514d795c21a8188f SHA1 8c180f3471633ff10a4e35600fc8e151dc2edb4b SHA256 a55fe056dd4c3ce3962fcda2464deabf7b03bdf2630fdfe6eaa3f4ec2877ef4c
 DIST kbdd-0.3.2.tar.bz2 202857 RMD160 ddcf1131db5518388a59b42535f7b29b937310da SHA1 d9aba7ab4da2b6c312cebfeac0ae18d77644d3e5 SHA256 15b3edc843b50e613d88fe46cb17a93da77d54a22f4fbdc85cd3ab3cdfddb92f
-EBUILD kbdd-0.2.9.ebuild 697 RMD160 20f0bc834b1ed35b483b50ecb46a9e3f8099d3e3 SHA1 9cbd38095c82f70fbf7ea6987c5e666572255c07 SHA256 fb535ccbe200489ab3a75518a3c48e809e930d594b3d650234e4f29976f3635a
-EBUILD kbdd-0.3.1.ebuild 697 RMD160 8a0ccc981e28dfaf1f7f5bd22415ef1285a29382 SHA1 f21954e5711fb69e746633e5f4be07b051688f97 SHA256 684958bb3556d7e967a106a098d1b9ffcd14b709e6c8f673954ea8d06e025f2d
+DIST kbdd-0.4.tar.bz2 121679 RMD160 781fa9a9bf195d992daf3c6efe978e5bdcfb3db0 SHA1 a6fb0f502039c2d2729060ed93d2e8d78d00d4c3 SHA256 339e6dec1b53b6ee1726ddc655cf778d8391ccbc19fb1ba33e16548b44842c7c
 EBUILD kbdd-0.3.2.ebuild 639 RMD160 050d04b4b2292ead28c25819daabd29892882793 SHA1 e335495604bbbc231ea5eeefc5f62114700c9f6e SHA256 d8b3c63ec6355b9294715d43186f4f4dd5437a98e05b427b2524d8b99cb4565f
+EBUILD kbdd-0.4.ebuild 639 RMD160 050d04b4b2292ead28c25819daabd29892882793 SHA1 e335495604bbbc231ea5eeefc5f62114700c9f6e SHA256 d8b3c63ec6355b9294715d43186f4f4dd5437a98e05b427b2524d8b99cb4565f
 EBUILD kbdd-9999.ebuild 733 RMD160 3478963ff4d8861d9f537cd2a243ea74a131beb0 SHA1 31377041212aefad64a9878c0c0a11f566ab78a7 SHA256 e51621f9e13f3e72c14f003746920592bf8302089aa3033ab94611136bd7a298
-MISC ChangeLog 1558 RMD160 e31fc63ea5bce072e111de11bb1ffc6da6404f86 SHA1 cc08ce18cb0e84c36ca3184b71401d0f9947b908 SHA256 e61c390cefa7df8d9c0136d434161fb2267e2f9f34b9cf377f69278952a47f80
+MISC ChangeLog 1705 RMD160 5810a52f5038eab107ab7b6cf919eea928e67e24 SHA1 433f9865fe33f00b68c9e70fc740164ec91be569 SHA256 34268d64d5f783240a8bb10f62206b020bd878025d96fe316e16c96e95353c2c
 MISC metadata.xml 206 RMD160 604b3b37a7181642bea84a4a2fb80e19bcebc500 SHA1 9019cf613a32dff2ba690c00a7773399a8aee59c SHA256 7d8bae067c81fe500c34a108969aaa2983c2870bdd7a99ed09cfc3983a0c928c
