@@ -1,34 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=3
-
-DESCRIPTION="Very simple layout switcher"
-HOMEPAGE="http://github.com/qnikst/kbdd"
-SRC_URI="http://github.com/qnikst/${PN}/tarball/v${PV} -> ${P}.tar.gz"
-HASH="492cd9d"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE="dbus"
-
-DEPEND="dev-libs/glib
-		x11-libs/libX11
-		dbus? (
-			sys-apps/dbus
-			>=dev-libs/dbus-glib-0.86
-			)"
-RDEPEND="${DEPEND}"
-
-S="${WORKDIR}/qnikst-kbdd-${HASH}"
-
-src_configure() {
-	econf $(use_enable dbus) || die "econf failed"
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "install failed"
-	dodoc README ChangeLog AUTHORS NEWS
-}
